2014-06-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h, src/global.c: Remove two obsolete variables and an
	unneeded extern, and regroup some stuff.

2014-06-19  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (window_init): Rename 'no_more_space()' to 'more_space()'
	for consistency, and tweak the related comments.
	* src/files.c: Update some comments to match the current status.
	* src/nano (finish, main): Allow -H/--historylog and -P/--poslog to
	function also when -I/--ignorercfiles is given.
	* configure.ac: Add a --disable-histories flag, to disable the code
	for the histories of search/replace strings and cursor positions.
	* doc/texinfo/nano.texi: Document the new configure flag.
	* src/*: Transform many DISABLE_NANORC to the new DISABLE_HISTORIES.
	This completes the fix for Savannah bug #42539.

2014-06-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c: Rename 'to_end' to 'to_eof', to lessen confusion
	with CUT_TO_END (which is about cutting to end-of-line).
	* src/text.c: Upon better thought, elide the unneeded 'to_eof'.
	* src/text.c: And elide a totally unused 'strdata2'.
	* src/text.c: Rename the undo type UNSPLIT to JOIN, for clarity.
	* src/global.c, src/rcfile.c: Rename function_type to key_type.
	* src/text.c (break_line): Remove a condition and a break that
	cancel each other.

2014-06-18  Mark Majeres  <mark@engine12.com>
	* src/text.c (add_undo): Don't start a new undo for CUT when the
	cutbuffer is being preserved, because then the cuts are contiguous
	and will form a single undo item.  And make sure the cutbuffer will
	be cleared when a new undo item for CUT is created.
	* src/cut.c (keeping_cutbuffer): New function, to access the status
	of 'keep_cutbuffer' from the undo/redo code in src/text.c.
	* src/cut.c (do_copy_text): Blow away the contents of the cutbuffer
	if the mark is set or the cursor has moved between two copy commands.

2014-06-17  Mark Majeres  <mark@engine12.com>