@@ -1,6 +1,8 @@
 2014-06-20  Benno Schulenberg  <bensberg@justemail.net>
 	* src/proto.h, src/global.c: Remove two obsolete variables and an
 	unneeded extern, and regroup some stuff.
+	* src/files.c (check_dotnano): Wrap long lines and actually report
+	the name that is not a directory.
 
 2014-06-19  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (window_init): Rename 'no_more_space()' to 'more_space()'
